# CORTHEX_HQ

./: .env.example  .env.local  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  CORTHEX_개인노트북_시작.bat  CORTHEX_바탕화면_시작.bat  CORTHEX_시작.bat  CORTHEX_외부접속_시작.bat  CORTHEX_회사노트북_시작.bat  README.md  deploy-fast.sh  main.py  plan.md  pyproject.toml  requirements.txt  run.bat  run_web.py  setup.bat  setup.sh
.claude/: launch.json  settings.json  settings.local.json
.claude/agents/: claude-md-checker.md  corthex-pm.md  investigator.md  log-analyzer.md  reality-check.md  security-reviewer.md  spec-validator.md
.claude/commands/: ab-test-setup.md  agent-sdk-dev.md  analytics-tracking.md  audit-project.md  book-architect.md  book-idea-validator.md  book-ideation.md  book-market-research.md  book-research-assistant.md  bug-fix.md  chapter-architect.md  code-review.md  commit.md  competitor-alternatives.md  connect-apps.md  content-strategy.md  continuous-learning.md  copy-editing.md  copywriting.md  create-pr.md  defuddle.md  developer-growth-analysis.md  documentation-generator.md  ebook-concept-development.md  ebook-discovery.md  email-sequence.md  form-cro.md  free-tool-strategy.md  last30days.md  launch-strategy.md  marketing-ideas.md  marketing-psychology.md  onboarding-cro.md  page-cro.md  paid-ads.md  paywall-upgrade-cro.md  perf.md  popup-cro.md  pr-review.md  pricing-strategy.md  (+9 more)
.claude/rules/: backend.md  frontend.md
.claude/scripts/: safety-guard.sh  setup-env.sh
.github/workflows/: auto-merge-claude.yml  deploy-v2.yml  deploy.yml  fix-server-scripts.yml  pr-quality-gate.yml  setup-mobile-ssh.yml
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
changelogs/: v1.0.0_20260208_초기시스템.md
config/: agents.json  agents.yaml  apply_souls.py  budget.yaml  fix_agents.py  models.yaml  presets.yaml  quality_rules.json  quality_rules.yaml  remove_specialists.py  schedules.yaml  sns.yaml  soul_gym_benchmarks.yaml  tools.json  tools.yaml  workflows.yaml  workspaces.json  workspaces.yaml  yaml2json.py
docs/: CHANGELOG.md  IMPLEMENTATION_PLAN.md  PROMPT-에이전트-소울-업그레이드.md  REFACTORING_PLAN.md  TODO-다음작업-프롬프트.md  TODO.md  TOOL_BRAINSTORM_PROMPT.md  UPDATE_LOG_v1.2.0.md  ai-model-compatibility.md  auto-merge-setup-prompt.md  blind-test-combined-prompt.md  blind-test-grading-prompt.md  blind-test-rubric.md  bug-reports.md  ceo-ideas.md  claude-reference.md  corthex-vision.md  deploy-guide.md  design-decisions.md  inspection-protocol.md  kis-api-reference.md  leet-master-qa-rubric.md  project-status.md  refactoring-guide.md  sketchvibe-guide.md  team-rules.md  고민상담.md
leet-opinion-scraper/: config.py  main.py  requirements.txt
output/: 20260212_105417_왜 리트마스터가 필요한가_ 이거에 대한 대답이 되어야.md
scripts/: check_claude_code_update.sh  migrate_v5.py  rename_agents.sh
souls/: NOTION_REPORTING_GUIDE.md  SOUL-UPGRADE-가이드-공통템플릿-v2.md  SOUL-UPGRADE-가이드-공통템플릿.md
src/: __init__.py  mcp_tool_server.py
tests/: test_rework.py  test_spawn_filter.py
updates/: 2026-02-12_bugfix-5건.md  2026-02-12_healthcheck-performance.md
web/: __init__.py  agent_router.py  agora_engine.py  ai_handler.py  app.py  argos_collector.py  arm_server.py  batch_system.py  config_loader.py  db.py  kis_client.py  mcp_sketchvibe.py  mini_server.py  scheduler.py  soul_gym_engine.py  state.py  telegram_bot.py  trading_engine.py  ws_manager.py
(+893 files in other folders)
