[project]
name = "corthex-hq"
version = "0.1.0"
description = "CORTHEX HQ - AI Agent Corporation (멀티 에이전트 자동화 시스템)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "jinja2>=3.1.0",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "python-telegram-bot>=21.0",
    # ─── 부서별 전문가 도구 ───
    "pykrx>=1.0.0",           # CIO: 한국거래소 주가 데이터
    "pandas-ta>=0.3.0",       # CIO: 기술적 지표 (RSI/MACD/BB)
    "pandas>=2.0.0",          # CIO: 데이터프레임 처리
    "notion-client>=2.0.0",   # CPO: 노션 API 클라이언트
    # ─── Phase 1: 최우선 신규 도구 ───
    "google-search-results>=2.4.0",  # 실시간 웹 검색 (SerpAPI)
    "PyMuPDF>=1.23.0",               # PDF 텍스트 추출
    "pdfplumber>=0.10.0",            # PDF 표 추출
    "tiktoken>=0.7.0",               # 토큰 카운터
    "openpyxl>=3.1.0",               # 엑셀 읽기/쓰기
    "matplotlib>=3.8.0",             # 차트 PNG 생성
    "plotly>=5.18.0",                # 인터랙티브 HTML 차트
    "numpy-financial>=1.0.0",        # 재무 계산 (DCF/NPV/IRR)
    # ─── Phase 2: 중요 신규 도구 ───
    "aiosmtplib>=3.0.0",             # 이메일 비동기 발송
    "yfinance>=0.2.30",              # 글로벌 주식/환율
    "google-api-python-client>=2.100.0",  # Google Calendar
    "google-auth-oauthlib>=1.2.0",   # Google OAuth2
    # ─── Phase 3: 미래 투자 도구 ───
    "chromadb>=0.4.0",               # 벡터 지식 검색 DB
    "pydub>=0.25.0",                 # 오디오 파일 분할
]

[project.scripts]
corthex = "main:cli"
corthex-web = "run_web:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
