[project]
name = "corthex-hq"
version = "0.1.0"
description = "CORTHEX HQ - AI Agent Corporation (멀티 에이전트 자동화 시스템)"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.30.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "jinja2>=3.1.0",
    "selenium>=4.20.0",
    "webdriver-manager>=4.0.0",
    "python-telegram-bot>=21.0",
    # ─── 부서별 전문가 도구 ───
    "pykrx>=1.0.0",           # CIO: 한국거래소 주가 데이터
    "pandas-ta>=0.4.0b0",     # CIO: 기술적 지표 (RSI/MACD/BB)
    "pandas>=2.0.0",          # CIO: 데이터프레임 처리
    "notion-client>=2.0.0",   # CPO: 노션 API 클라이언트
]

[project.scripts]
corthex = "main:cli"
corthex-web = "run_web:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
